# Ocawai

./: .gitignore  .travis-ci.sh  .travis.yml  INSTALL.md  MANUAL.md  Makefile  Makefile.am  Makefile.in  README.md  README_dev.md  config.status  configure  configure.ac
autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
resources/: tiles.config
resources/config/: buildings.json  settings_default.json  settings_engine_default.json  settings_interface_default.json  tiles.json  units.json
resources/music/: HymneToJoy.mid
resources/scripts/: olive.script  test.script  test2.script
resources/textures/gui/: menu.slc
resources/textures/tiles/: tilejoints.cfg  tilejoints.set  tileset.cfg  tileset.set
soutenance/: presentation.tex
src/Reseaux/: Server  Server.cmi  Server.cmo  serveur.ml
src/common/: Action.ml  Action.mli  Battlefield.ml  Battlefield.mli  Building.atd  Building.ml  Building.mli  ClientPlayer.ml  ClientPlayer.mli  Config.ml  Config.mli  FieldGenerator.ml  FieldGenerator.mli  Fog.ml  Fog.mli  Logics.ml  Logics.mli  Map.ml  Map.mli  Path.ml  Path.mli  Pathfinder.ml  Pathfinder.mli  Player.ml  Player.mli  PosPrioQueue.mli  Position.ml  Position.mli  PrioQueue.ml  Resource.mli  Ressource.mli  ScriptedPlayer.ml  ScriptedPlayer.mli  Settings.atd  Tile.atd  Tile.ml  Tile.mli  Types.ml  Types.mli  UnionFind.ml  (+7 more)
src/common/config/: Config.ml  Config.mli  Settings.atd  Settings_engine.atd  Settings_interface.atd
src/common/utils/: Fonts.ml  Fonts.mli  PosPrioQueue.ml  PosPrioQueue.mli  PrioQueue.ml  PrioQueue.mli  Utils.ml  Utils.mli
src/engine/: FieldGenerator.ml  Fog.ml  Game_engine.ml  Game_engine.mli  dummy_serv.ml  game_engine.ml  game_engine.mli  main.ml  main_engine.ml
src/interface/: Camera.ml  Camera.mli  CharacterScreen.ml  Characters.ml  Characters.mli  ClientData.ml  ClientData.mli  Credits.ml  Cursor.ml  Cursor.mli  CustomDrawable.ml  CustomDrawable.mli  FPS.ml  Game.ml  Game.mli  Interpolators.ml  Interpolators.mli  LoadScreen.ml  LoadScreen.mli  MainMenu.ml  MainMenu.mli  Manager.ml  Manager.mli  Menu.mli  Pathfinder.ml  Pathfinder.mli  Render.ml  Render.mli  Settings.ml  Settings.mli  SettingsScreen.ml  SettingsScreen.mli  SlicedTexture.ml  SlicedTexture.mli  Snake.ml  Snake.mli  State.ml  State.mli  TextureLibrary.ml  TextureLibrary.mli  (+7 more)
src/interface/amaze/: BloomEffect.ml  BloomEffect.mli  Booms.ml  ParticleManager.ml  ParticleManager.mli  ParticleMixins.ml  (+4 more)
src/music/: DList.ml  DList.mli  Instrument.ml  Instrument.mli  MMPulseaudio.mli  MidiPlayer.ml  MidiPlayer.mli  MidiV.ml  MidiV.mli  Modify.ml  Modify.mli  Mood.ml  Mood.mli  Music.ml  Music.mli  MusicPlayer.ml  README  Sounds.ml  Sounds.mli  TPTM.ml  TPTM.mli  Test.ml  Tiles.ml  Tiles.mli  Time.ml  Time.mli
src/network/: cliPlayer.ml  client.ml  dealer.ml  dummy_client.ml  netPlayer.ml  network_tool.ml  network_tool.mli  send&recv.ml  send_recv.ml  send_recv.mli  server.ml  server2.ml  server_recovery.ml  test_open_connection.ml  test_open_connections_timeout.ml  test_open_n_connections.ml
src/script/: Checker.ml  Checker.mli  Interpreter.ml  Interpreter.mli  Lexer.mll  Parser.mly  ScriptCDFunctions.ml  ScriptCDFunctions.mli  ScriptCore.ml  ScriptCore.mli  ScriptEngine.ml  ScriptEngine.mli  ScriptTypes.mli  ScriptValues.ml  ScriptValues.mli  Types.mli  script.ml  test.script
test/: Xtest.sh  fog_test.ml  generation_test.ml  interface_test.ml  logics_test.ml  music_test.ml  occurs_check.script  occurs_check1.script  player_test.ml  script_test.ml  script_test_assoc.script  snake.sh  test_snake.sh  typechecker.script  unit_unit.script  xdotools.sh
(+28 files in other folders)
